// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateItemQueryBuilder > handles update item query with ADD statements 1`] = `
{
  "dataTimestamp": 200,
  "someBoolean": true,
  "someSet": Set {
    "item1",
    "item2",
  },
  "somethingElse": 7,
  "userId": "1010",
}
`;

exports[`UpdateItemQueryBuilder > handles update item query with DELETE statements 1`] = `
{
  "dataTimestamp": 2,
  "nested": {
    "nestedSet": Set {
      "5",
    },
  },
  "someSet": Set {
    "1",
  },
  "userId": "1",
}
`;

exports[`UpdateItemQueryBuilder > handles update item query with REMOVE statements 1`] = `
{
  "dataTimestamp": 200,
  "someBoolean": true,
  "userId": "1010",
}
`;

exports[`UpdateItemQueryBuilder > handles update item query with SET statements 1`] = `
{
  "dataTimestamp": 2,
  "someBoolean": true,
  "somethingElse": 3,
  "tags": [
    "test_tag",
  ],
  "userId": "1",
}
`;

exports[`UpdateItemQueryBuilder > handles update item query with multiple different operations 1`] = `
{
  "dataTimestamp": 2,
  "nested": {
    "nestedBoolean": true,
  },
  "someSet": Set {
    "1",
    "2",
    "3",
    "4",
    "5",
  },
  "somethingElse": 10,
  "userId": "1",
}
`;
